# zdbg

./: .gitignore  CMakeLists.txt  README.md  debugger  test.c
src/: console.c  console.h  debugger.c  debugger.h  main.c
